Códigos mejorados para visualización

--- a/ensayo/informe/bibliografia.bib
+++ b/ensayo/informe/bibliografia.bib
@@ -36,3 +36,22 @@
   year={2013},
   publisher={Oxford University Press}
 }
+
+@article{quarles2012stability,
+  title={The stability of the suggested planet in the $\nu$ Octantis system: a numerical and statistical study},
+  author={Quarles, Billy and Cuntz, Manfred and Musielak, Zdzislaw E},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={421},
+  number={4},
+  pages={2930--2939},
+  year={2012},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@misc{rubsanmon2025_mecel_nuoct,
+  author       = {Víctor Rubén Sandez},
+  title        = {{mecel\_nuoct: Análisis dinámico del sistema $\nu$ Octantis (repositorio GitHub)}},
+  year         = {2025},
+  howpublished = {\url{https://github.com/rubsanmon22/mecel_nuoct}},
+  note         = {Versión Preliminar},
+}
